tests/reference/asr_preprocess-cpp_err6-47462f4.stderr
C preprocessor error: Unexpected token type '(', expected type ')'
 --> tests/errors/cpp_err6.f90:2:13
  |
2 | #if 1 + (1+2 (
  |             ^^^ 
